--- a/src/Tankerz.Domain/Tankerz.Domain.csproj
+++ b/src/Tankerz.Domain/Tankerz.Domain.csproj
@@ -12,6 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ImageProcessor" Version="2.9.1" />
+    <PackageReference Include="ImageProcessor.Plugins.WebP" Version="1.3.0" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
     <PackageReference Include="Volo.Abp.Emailing" Version="4.3.2" />
     <PackageReference Include="Volo.Abp.Identity.Domain" Version="4.3.2" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="4.3.2" />
@@ -22,6 +25,10 @@
     <PackageReference Include="Volo.Abp.TenantManagement.Domain" Version="4.3.2" />
     <PackageReference Include="Volo.Abp.FeatureManagement.Domain" Version="4.3.2" />
     <PackageReference Include="Volo.Abp.SettingManagement.Domain" Version="4.3.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="TankerzEntities\Orders\" />
   </ItemGroup>
 
 </Project>
