--- a/src/Tankerz.Application.Contracts/Tankerz.Application.Contracts.csproj
+++ b/src/Tankerz.Application.Contracts/Tankerz.Application.Contracts.csproj
@@ -21,4 +21,9 @@
     <PackageReference Include="Volo.Abp.SettingManagement.Application.Contracts" Version="4.3.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Blogs\" />
+    <Folder Include="TankerzPages\" />
+  </ItemGroup>
+
 </Project>
